@@ -1,3 +1,5 @@
+2019/12/24:
+• Added taboo and untaboo commands.
 2019/12/18:
 • Added echo command.
 • Fix bug where bot got confused by its own name.
